--- a/index.html
+++ b/index.html
@@ -37,7 +37,73 @@
         </address>
 
     </header>
+    <main>
+        <section class="hero">
+            <img src="./images/hero/hero-girl.jpg" alt="hero girl" width="392" height="545">
+            <h1>Reviving the traditional Ukrainian artistry in every stitch.</h1>
+            <a href="">ORDER <img src="./images/hero/arrow.svg" alt="arrow"></a>
+            <img src="./images/hero/hero-star.png" alt="gold star" width="52" height="51">
+        </section>
 
+        <section class="about">
+            <h2>About Us</h2>
+            <p>
+                The store "Vyshyvanka Vibes" is a place where traditional Ukrainian vyshyvanka comes to life with new
+                zest and style.
+                Our store offers a wide selection of high-quality and authentic embroidery, which combines the elegance
+                of traditional
+                needlework and modern design.
+            </p>
+            <p> In "Vyshyvanka Vibes" you will find various models of embroidery, from classic to modern, corresponding
+                to the latest
+                fashion trends. Our embroidery is made using natural fabrics and is embroidered by highly qualified
+                craftsmen who convey
+                the beauty of Ukrainian culture in every detail.We believe that vyshyvanka is not just clothing, but a
+                symbol of
+                national pride, the heritage of our ancestors and a way of expressing one's individuality. Each
+                embroidery from
+                "Vyshyvanka Vibes" has its own unique history and symbolism, which gives it a special meaning.
+            </p>
+            <img src="./images/about/about-girl-and-boy.jpg" alt="girl and boy" width="594" height="545">
+        </section>
+
+        <section class="our-collection">
+            <h2>Our collection</h2>
+            <ul>
+                <li>
+                    <img src="" alt="" width="" height="">
+                    <h3></h3>
+                    <p></p>
+                </li>
+                <li>
+                    <img src="" alt="" width="" height="">
+                    <h3></h3>
+                    <p></p>
+                </li>
+                <li>
+                    <img src="" alt="" width="" height="">
+                    <h3></h3>
+                    <p></p>
+                </li>
+                <li>
+                    <img src="" alt="" width="" height="">
+                    <h3></h3>
+                    <p></p>
+                </li>
+                <li>
+                    <img src="" alt="" width="" height="">
+                    <h3></h3>
+                    <p></p>
+                </li>
+                <li>
+                    <img src="" alt="" width="" height="">
+                    <h3></h3>
+                    <p></p>
+                </li>
+            </ul>
+
+        </section>
+    </main>
 </body>
 
 </html>
