add sectiot collection

--- a/index.html
+++ b/index.html
@@ -40,9 +40,10 @@
     <main>
         <section class="hero">
             <img src="./images/hero/hero-girl.jpg" alt="hero girl" width="392" height="545">
-            <h1>Reviving the traditional Ukrainian artistry in every stitch.</h1>
+            <h1>Reviving the traditional <span>Ukrainian</span> artistry in every stitch.</h1>
             <a href="">ORDER <img src="./images/hero/arrow.svg" alt="arrow"></a>
             <img src="./images/hero/hero-star.png" alt="gold star" width="52" height="51">
+            <p>all embroidery is made by hand</p>
         </section>
 
         <section class="about">
@@ -64,41 +65,49 @@
                 embroidery from
                 "Vyshyvanka Vibes" has its own unique history and symbolism, which gives it a special meaning.
             </p>
-            <img src="./images/about/about-girl-and-boy.jpg" alt="girl and boy" width="594" height="545">
+            <img src="./images/about/about-girl-and-boy.jpg" alt="a fragment of a shirt" width="594" height="545">
+            <img src="./images/about/elements.png" alt="elements" width="545" height="484">
         </section>
 
         <section class="our-collection">
             <h2>Our collection</h2>
+
             <ul>
                 <li>
-                    <img src="" alt="" width="" height="">
-                    <h3></h3>
-                    <p></p>
+                    <img src="./images/our-collection/our-collect-01.png" alt="AUGUST Poltava women's blouseRING"
+                        width="380" height="430">
+                    <h3>AUGUST Poltava women's blouseRING</h3>
+                    <p>3300 UAH</p>
                 </li>
                 <li>
-                    <img src="" alt="" width="" height="">
-                    <h3></h3>
-                    <p></p>
+                    <img src="./images/our-collection/our-collect-02.png" alt="Women's blouse Gorgany" width="380"
+                        height="430">
+                    <h3>Women's blouse Gorgany</h3>
+                    <p>3350 UAH</p>
                 </li>
                 <li>
-                    <img src="" alt="" width="" height="">
-                    <h3></h3>
-                    <p></p>
+                    <img src="./images/our-collection/our-collect-03.png" alt="Women's blouse Crimea" width="380"
+                        height="430">
+                    <h3>Women's blouse Crimea</h3>
+                    <p>4000 UAH</p>
                 </li>
                 <li>
-                    <img src="" alt="" width="" height="">
-                    <h3></h3>
-                    <p></p>
+                    <img src="./images/our-collection/our-collect-04.png" alt="Men's shirt Verkhovina" width="380"
+                        height="430">
+                    <h3>Men's shirt Verkhovina</h3>
+                    <p>3100 UAH</p>
                 </li>
                 <li>
-                    <img src="" alt="" width="" height="">
-                    <h3></h3>
-                    <p></p>
+                    <img src="./images/our-collection/our-collect-05.png" alt="Mountain men's shirt" width="380"
+                        height="430">
+                    <h3>Mountain men's shirt</h3>
+                    <p>3300 UAH</p>
                 </li>
                 <li>
-                    <img src="" alt="" width="" height="">
-                    <h3></h3>
-                    <p></p>
+                    <img src="./images/our-collection/our-collect-06.png" alt="Men's shirt Yasen" width="380"
+                        height="430">
+                    <h3>Men's shirt Yasen</h3>
+                    <p>1700 UAH</p>
                 </li>
             </ul>
 
