add section galery and testimonials

--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
 
         <section class="our-collection">
             <h2>Our collection</h2>
+            <img src="./images/our-collection/traditional-krainian-element.png" alt="traditional-krainian-element">
 
             <ul>
                 <li>
@@ -111,6 +112,51 @@
                 </li>
             </ul>
 
+        </section>
+
+        <section class="galery">
+            <img src="./images/galery/" alt="girl" width="1280" height="776">
+        </section>
+
+        <section class="form">
+            <img src="./images/form/elements-grey.png" alt="traditional elements grey" width="289" height="484">
+            <img src="./images/form/element-vyshyvanka.jpg" alt="element vyshyvanka" width="588" height="521">
+
+            <h2>Your order is our priority: Personalized approach and quality of service</h2>
+            <button type="button">Send</button>
+        </section>
+
+        <section class="testimonials">
+            <h2>Testimonials</h2>
+            <ul>
+                <li>
+                    <img src="" alt="" width="64" height="64">
+                    <h3>Maria Tkachuk</h3>
+                    <p>I was pleasantly surprised by the variety of embroidery offered by Vyshyvanka Vibes. They have
+                        models for every taste -
+                        from classic to modern. I bought an embroidered dress to celebrate a special occasion and
+                        received impeccable service
+                        and refinement in every detail.</p>
+                </li>
+                <li>
+                    <img src="" alt="" width="64" height="64">
+                    <h3>Sergey Rybachok</h3>
+                    <p>Vyshyvanka Vibes exceeds all my expectations! Their vyshyvanka are simply masterpieces! I fell in
+                        love with the quality
+                        of the materials and the skill of the artisans behind each product. This is my favorite
+                        embroidery shop where I always
+                        find something special and unique.</p>
+                </li>
+                <li>
+                    <img src="" alt="" width="64" height="64">
+                    <h3>Natalia Chatuk</h3>
+                    <p>Vyshyvanka Vibes is a real find for everyone who appreciates Ukrainian culture. Their embroidery
+                        reflects the spirit and
+                        traditions of our people. I not only buy embroidered shirts for myself, but also give them to my
+                        friends abroad as a
+                        symbol of our beauty and national pride.</p>
+                </li>
+            </ul>
         </section>
     </main>
 </body>
