--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
         <section class="our-collection">
             <h2>Our collection</h2>
-            <img src="./images/our-collection/traditional-krainian-element.png" alt="traditional-krainian-element">
+            <img src="./images/our-collection/traditional-krainian-element.png" alt="traditional ukrainian element">
 
             <ul>
                 <li>
@@ -115,14 +115,14 @@
         </section>
 
         <section class="galery">
-            <img src="./images/galery/" alt="girl" width="1280" height="776">
+            <img src="./images/galery/girl.jpg" alt="girl" width="1280" height="776">
         </section>
 
         <section class="form">
             <img src="./images/form/elements-grey.png" alt="traditional elements grey" width="289" height="484">
             <img src="./images/form/element-vyshyvanka.jpg" alt="element vyshyvanka" width="588" height="521">
 
-            <h2>Your order is our priority: Personalized approach and quality of service</h2>
+            <h2><span>Your order</span> is our priority: Personalized approach and quality of service</h2>
             <button type="button">Send</button>
         </section>
 
@@ -130,7 +130,7 @@
             <h2>Testimonials</h2>
             <ul>
                 <li>
-                    <img src="" alt="" width="64" height="64">
+                    <img src="./images/testimonials/maria-tkachuk.png" alt="Maria Tkachuk" width="64" height="64">
                     <h3>Maria Tkachuk</h3>
                     <p>I was pleasantly surprised by the variety of embroidery offered by Vyshyvanka Vibes. They have
                         models for every taste -
@@ -139,7 +139,7 @@
                         and refinement in every detail.</p>
                 </li>
                 <li>
-                    <img src="" alt="" width="64" height="64">
+                    <img src="./images/testimonials/sergey-rybachok.png" alt="Sergey Rybachok" width="64" height="64">
                     <h3>Sergey Rybachok</h3>
                     <p>Vyshyvanka Vibes exceeds all my expectations! Their vyshyvanka are simply masterpieces! I fell in
                         love with the quality
@@ -148,7 +148,7 @@
                         find something special and unique.</p>
                 </li>
                 <li>
-                    <img src="" alt="" width="64" height="64">
+                    <img src="./images/testimonials/natalia-chatuk.png" alt="Natalia Chatuk" width="64" height="64">
                     <h3>Natalia Chatuk</h3>
                     <p>Vyshyvanka Vibes is a real find for everyone who appreciates Ukrainian culture. Their embroidery
                         reflects the spirit and
@@ -158,6 +158,16 @@
                 </li>
             </ul>
         </section>
+        <footer>
+            <ul>
+                <li><a href="">About us</a></li>
+                <li><a href="">Our collection</a></li>
+                <li><a href="">CUSTOMER ORDER</a></li>
+                <li><a href="">TEstimonials</a></li>
+            </ul>
+            <p>A touch of <span>Ukrainian</span> culture in every embroidery</p>
+            <img src="./images/footer/footer-elements.png" alt="traditional elements gold">
+        </footer>
     </main>
 </body>
 
