fix image footer

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                 <li><a href="">TEstimonials</a></li>
             </ul>
             <p>A touch of <span>Ukrainian</span> culture in every embroidery</p>
-            <img src="./images/footer/footer-elements.png" alt="traditional elements gold">
+            <img src="./images/footer/footer-elements.png" alt="traditional elements gold" width="595" height="528">
         </footer>
     </main>
 </body>
