--- a/index.html
+++ b/index.html
@@ -1,174 +1,297 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vyshyvanka Vibes</title>
-    <link rel="stylesheet" href="css/style.css">
-</head>
+    <link rel="shortcut icon" href="./images/logo.svg" type="image/svg+xml" />
+    <link rel="stylesheet" href="css/style.css" />
+  </head>
 
-<body>
-    <header>
-        <a href="./index.html"><img src="./images/logo.svg" alt="logo" width="44" height="39"></a>
+  <body>
+    <!-- Header -->
+    <header class="header">
+      <a href="./index.html"
+        ><img src="./images/logo.svg" alt="logo" width="44" height="39"
+      /></a>
 
-        <nav>
-            <ul>
-                <li><a href="">About us</a></li>
-                <li><a href="">Our collection</a></li>
-                <li><a href="">CUSTOMER ORDER</a></li>
-                <li><a href="">TEstimonials</a></li>
-            </ul>
-        </nav>
-        <address>
-            <a href="tel:+380684439426">+380 (68) 443-94-26</a>
-            <ul>
-                <li><a href="" target="_blank"><img src="./images/messenger/facebook.svg" alt="facebook" width="44"
-                            height="44"></a>
-                </li>
-                <li><a href="" target="_blank"><img src="./images/messenger/instagram.svg" alt="instagram" width="44"
-                            height="44"></a>
-                </li>
-                <li><a href="" target="_blank"><img src="./images/messenger/youtube.svg" alt="youtube" width="44"
-                            height="44"></a>
-                </li>
-            </ul>
-
-        </address>
-
+      <nav>
+        <ul>
+          <li><a href="">About us</a></li>
+          <li><a href="">Our collection</a></li>
+          <li><a href="">CUSTOMER ORDER</a></li>
+          <li><a href="">TEstimonials</a></li>
+        </ul>
+      </nav>
+      <address>
+        <a href="tel:+380684439426">+380 (68) 443-94-26</a>
+        <ul>
+          <li>
+            <a href="" target="_blank"
+              ><img
+                src="./images/messenger/facebook.svg"
+                alt="facebook"
+                width="28"
+                height="28"
+            /></a>
+          </li>
+          <li>
+            <a href="" target="_blank"
+              ><img
+                src="./images/messenger/instagram.svg"
+                alt="instagram"
+                width="28"
+                height="28"
+            /></a>
+          </li>
+          <li>
+            <a href="" target="_blank"
+              ><img
+                src="./images/messenger/youtube.svg"
+                alt="youtube"
+                width="28"
+                height="28"
+            /></a>
+          </li>
+        </ul>
+      </address>
     </header>
+
     <main>
-        <section class="hero">
-            <img src="./images/hero/hero-girl.jpg" alt="hero girl" width="392" height="545">
-            <h1>Reviving the traditional <span>Ukrainian</span> artistry in every stitch.</h1>
-            <a href="">ORDER <img src="./images/hero/arrow.svg" alt="arrow"></a>
-            <img src="./images/hero/hero-star.png" alt="gold star" width="52" height="51">
-            <p>all embroidery is made by hand</p>
-        </section>
+      <!-- Hero -->
+      <section class="hero">
+        <img
+          src="./images/hero/hero-girl.jpg"
+          alt="hero girl"
+          width="392"
+          height="545"
+        />
+        <h1>
+          Reviving the traditional
+          <span class="accent">Ukrainian</span> artistry in every stitch.
+        </h1>
+        <a href="">ORDER <img src="./images/hero/arrow.svg" alt="arrow" /></a>
+        <img
+          src="./images/hero/hero-star.png"
+          alt="gold star"
+          width="52"
+          height="51"
+        />
+        <p>all embroidery is made by hand</p>
+      </section>
 
-        <section class="about">
-            <h2>About Us</h2>
+      <!-- About -->
+      <section class="about">
+        <h2>About Us</h2>
+        <p>
+          The store "Vyshyvanka Vibes" is a place where traditional Ukrainian
+          vyshyvanka comes to life with new zest and style. Our store offers a
+          wide selection of high-quality and authentic embroidery, which
+          combines the elegance of traditional needlework and modern design.
+        </p>
+        <p>
+          In "Vyshyvanka Vibes" you will find various models of embroidery, from
+          classic to modern, corresponding to the latest fashion trends. Our
+          embroidery is made using natural fabrics and is embroidered by highly
+          qualified craftsmen who convey the beauty of Ukrainian culture in
+          every detail.We believe that vyshyvanka is not just clothing, but a
+          symbol of national pride, the heritage of our ancestors and a way of
+          expressing one's individuality. Each embroidery from "Vyshyvanka
+          Vibes" has its own unique history and symbolism, which gives it a
+          special meaning.
+        </p>
+        <img
+          src="./images/about/about-girl-and-boy.jpg"
+          alt="a fragment of a shirt"
+          width="594"
+          height="545"
+        />
+        <img
+          src="./images/about/elements.png"
+          alt="elements"
+          width="545"
+          height="484"
+        />
+      </section>
+
+      <!-- Our colliction -->
+      <section class="our-collection">
+        <h2>Our collection</h2>
+        <img
+          src="./images/our-collection/traditional-ukrainian-element-gold.png"
+          alt="traditional ukrainian element"
+        />
+
+        <ul>
+          <li>
+            <img
+              src="./images/our-collection/our-collect-01.jpg"
+              alt="AUGUST Poltava women's blouseRING"
+              width="380"
+              height="430"
+            />
+            <h3>AUGUST Poltava women's blouseRING</h3>
+            <p>3300 UAH</p>
+          </li>
+          <li>
+            <img
+              src="./images/our-collection/our-collect-02.jpg"
+              alt="Women's blouse Gorgany"
+              width="380"
+              height="430"
+            />
+            <h3>Women's blouse Gorgany</h3>
+            <p>3350 UAH</p>
+          </li>
+          <li>
+            <img
+              src="./images/our-collection/our-collect-03.jpg"
+              alt="Women's blouse Crimea"
+              width="380"
+              height="430"
+            />
+            <h3>Women's blouse Crimea</h3>
+            <p>4000 UAH</p>
+          </li>
+          <li>
+            <img
+              src="./images/our-collection/our-collect-04.jpg"
+              alt="Men's shirt Verkhovina"
+              width="380"
+              height="430"
+            />
+            <h3>Men's shirt Verkhovina</h3>
+            <p>3100 UAH</p>
+          </li>
+          <li>
+            <img
+              src="./images/our-collection/our-collect-05.jpg"
+              alt="Mountain men's shirt"
+              width="380"
+              height="430"
+            />
+            <h3>Mountain men's shirt</h3>
+            <p>3300 UAH</p>
+          </li>
+          <li>
+            <img
+              src="./images/our-collection/our-collect-06.jpg"
+              alt="Men's shirt Yasen"
+              width="380"
+              height="430"
+            />
+            <h3>Men's shirt Yasen</h3>
+            <p>1700 UAH</p>
+          </li>
+        </ul>
+      </section>
+
+      <!-- Galery -->
+      <section class="galery">
+        <img
+          src="./images/galery/girl.jpg"
+          alt="girl"
+          width="1280"
+          height="776"
+        />
+      </section>
+
+      <!-- Form -->
+      <section class="form">
+        <img
+          src="./images/form/traditional-ukrainian-elements-grey.png"
+          alt="traditional elements grey"
+          width="289"
+          height="484"
+        />
+        <img
+          src="./images/form/element-vyshyvanka.jpg"
+          alt="element vyshyvanka"
+          width="588"
+          height="521"
+        />
+
+        <h2>
+          <span class="accent">Your order</span> is our priority: Personalized
+          approach and quality of service
+        </h2>
+        <button type="button">Send</button>
+      </section>
+
+      <!-- Testimonials -->
+      <section class="testimonials">
+        <h2>Testimonials</h2>
+        <ul>
+          <li>
+            <img
+              src="./images/testimonials/maria-tkachuk.png"
+              alt="Maria Tkachuk"
+              width="64"
+              height="64"
+            />
+            <h3>Maria Tkachuk</h3>
             <p>
-                The store "Vyshyvanka Vibes" is a place where traditional Ukrainian vyshyvanka comes to life with new
-                zest and style.
-                Our store offers a wide selection of high-quality and authentic embroidery, which combines the elegance
-                of traditional
-                needlework and modern design.
+              I was pleasantly surprised by the variety of embroidery offered by
+              Vyshyvanka Vibes. They have models for every taste - from classic
+              to modern. I bought an embroidered dress to celebrate a special
+              occasion and received impeccable service and refinement in every
+              detail.
             </p>
-            <p> In "Vyshyvanka Vibes" you will find various models of embroidery, from classic to modern, corresponding
-                to the latest
-                fashion trends. Our embroidery is made using natural fabrics and is embroidered by highly qualified
-                craftsmen who convey
-                the beauty of Ukrainian culture in every detail.We believe that vyshyvanka is not just clothing, but a
-                symbol of
-                national pride, the heritage of our ancestors and a way of expressing one's individuality. Each
-                embroidery from
-                "Vyshyvanka Vibes" has its own unique history and symbolism, which gives it a special meaning.
+          </li>
+          <li>
+            <img
+              src="./images/testimonials/sergey-rybachok.png"
+              alt="Sergey Rybachok"
+              width="64"
+              height="64"
+            />
+            <h3>Sergey Rybachok</h3>
+            <p>
+              Vyshyvanka Vibes exceeds all my expectations! Their vyshyvanka are
+              simply masterpieces! I fell in love with the quality of the
+              materials and the skill of the artisans behind each product. This
+              is my favorite embroidery shop where I always find something
+              special and unique.
             </p>
-            <img src="./images/about/about-girl-and-boy.jpg" alt="a fragment of a shirt" width="594" height="545">
-            <img src="./images/about/elements.png" alt="elements" width="545" height="484">
-        </section>
+          </li>
+          <li>
+            <img
+              src="./images/testimonials/natalia-chatuk.png"
+              alt="Natalia Chatuk"
+              width="64"
+              height="64"
+            />
+            <h3>Natalia Chatuk</h3>
+            <p>
+              Vyshyvanka Vibes is a real find for everyone who appreciates
+              Ukrainian culture. Their embroidery reflects the spirit and
+              traditions of our people. I not only buy embroidered shirts for
+              myself, but also give them to my friends abroad as a symbol of our
+              beauty and national pride.
+            </p>
+          </li>
+        </ul>
+      </section>
 
-        <section class="our-collection">
-            <h2>Our collection</h2>
-            <img src="./images/our-collection/traditional-krainian-element.png" alt="traditional ukrainian element">
-
-            <ul>
-                <li>
-                    <img src="./images/our-collection/our-collect-01.png" alt="AUGUST Poltava women's blouseRING"
-                        width="380" height="430">
-                    <h3>AUGUST Poltava women's blouseRING</h3>
-                    <p>3300 UAH</p>
-                </li>
-                <li>
-                    <img src="./images/our-collection/our-collect-02.png" alt="Women's blouse Gorgany" width="380"
-                        height="430">
-                    <h3>Women's blouse Gorgany</h3>
-                    <p>3350 UAH</p>
-                </li>
-                <li>
-                    <img src="./images/our-collection/our-collect-03.png" alt="Women's blouse Crimea" width="380"
-                        height="430">
-                    <h3>Women's blouse Crimea</h3>
-                    <p>4000 UAH</p>
-                </li>
-                <li>
-                    <img src="./images/our-collection/our-collect-04.png" alt="Men's shirt Verkhovina" width="380"
-                        height="430">
-                    <h3>Men's shirt Verkhovina</h3>
-                    <p>3100 UAH</p>
-                </li>
-                <li>
-                    <img src="./images/our-collection/our-collect-05.png" alt="Mountain men's shirt" width="380"
-                        height="430">
-                    <h3>Mountain men's shirt</h3>
-                    <p>3300 UAH</p>
-                </li>
-                <li>
-                    <img src="./images/our-collection/our-collect-06.png" alt="Men's shirt Yasen" width="380"
-                        height="430">
-                    <h3>Men's shirt Yasen</h3>
-                    <p>1700 UAH</p>
-                </li>
-            </ul>
-
-        </section>
-
-        <section class="galery">
-            <img src="./images/galery/girl.jpg" alt="girl" width="1280" height="776">
-        </section>
-
-        <section class="form">
-            <img src="./images/form/elements-grey.png" alt="traditional elements grey" width="289" height="484">
-            <img src="./images/form/element-vyshyvanka.jpg" alt="element vyshyvanka" width="588" height="521">
-
-            <h2><span>Your order</span> is our priority: Personalized approach and quality of service</h2>
-            <button type="button">Send</button>
-        </section>
-
-        <section class="testimonials">
-            <h2>Testimonials</h2>
-            <ul>
-                <li>
-                    <img src="./images/testimonials/maria-tkachuk.png" alt="Maria Tkachuk" width="64" height="64">
-                    <h3>Maria Tkachuk</h3>
-                    <p>I was pleasantly surprised by the variety of embroidery offered by Vyshyvanka Vibes. They have
-                        models for every taste -
-                        from classic to modern. I bought an embroidered dress to celebrate a special occasion and
-                        received impeccable service
-                        and refinement in every detail.</p>
-                </li>
-                <li>
-                    <img src="./images/testimonials/sergey-rybachok.png" alt="Sergey Rybachok" width="64" height="64">
-                    <h3>Sergey Rybachok</h3>
-                    <p>Vyshyvanka Vibes exceeds all my expectations! Their vyshyvanka are simply masterpieces! I fell in
-                        love with the quality
-                        of the materials and the skill of the artisans behind each product. This is my favorite
-                        embroidery shop where I always
-                        find something special and unique.</p>
-                </li>
-                <li>
-                    <img src="./images/testimonials/natalia-chatuk.png" alt="Natalia Chatuk" width="64" height="64">
-                    <h3>Natalia Chatuk</h3>
-                    <p>Vyshyvanka Vibes is a real find for everyone who appreciates Ukrainian culture. Their embroidery
-                        reflects the spirit and
-                        traditions of our people. I not only buy embroidered shirts for myself, but also give them to my
-                        friends abroad as a
-                        symbol of our beauty and national pride.</p>
-                </li>
-            </ul>
-        </section>
-        <footer>
-            <ul>
-                <li><a href="">About us</a></li>
-                <li><a href="">Our collection</a></li>
-                <li><a href="">CUSTOMER ORDER</a></li>
-                <li><a href="">TEstimonials</a></li>
-            </ul>
-            <p>A touch of <span>Ukrainian</span> culture in every embroidery</p>
-            <img src="./images/footer/footer-elements.png" alt="traditional elements gold" width="595" height="528">
-        </footer>
+      <!-- Footer -->
+      <footer>
+        <ul>
+          <li><a href="">About us</a></li>
+          <li><a href="">Our collection</a></li>
+          <li><a href="">CUSTOMER ORDER</a></li>
+          <li><a href="">TEstimonials</a></li>
+        </ul>
+        <p>
+          A touch of <span class="accent">Ukrainian</span> culture in every
+          embroidery
+        </p>
+        <img
+          src="./images/footer/footer-elements.png"
+          alt="traditional elements gold"
+          width="595"
+          height="528"
+        />
+      </footer>
     </main>
-</body>
-
+  </body>
 </html>
