add class all document

--- a/index.html
+++ b/index.html
@@ -11,23 +11,24 @@
   <body>
     <!-- Header -->
     <header class="header">
-      <a href="./index.html"
-        ><img src="./images/logo.svg" alt="logo" width="44" height="39"
-      /></a>
+      <a href="./index.html">
+        <img src="./images/logo.svg" alt="logo" width="44" height="39" />
+      </a>
 
-      <nav>
-        <ul>
-          <li><a href="">About us</a></li>
-          <li><a href="">Our collection</a></li>
-          <li><a href="">CUSTOMER ORDER</a></li>
-          <li><a href="">TEstimonials</a></li>
+      <nav class="nav">
+        <ul class="nav-list">
+          <li class="nav-item"><a href="">About us</a></li>
+          <li class="nav-item"><a href="">Our collection</a></li>
+          <li class="nav-item"><a href="">CUSTOMER ORDER</a></li>
+          <li class="nav-item"><a href="">TEstimonials</a></li>
         </ul>
       </nav>
-      <address>
-        <a href="tel:+380684439426">+380 (68) 443-94-26</a>
-        <ul>
-          <li>
-            <a href="" target="_blank"
+
+      <address class="address">
+        <a class="address-link" href="tel:+380684439426">+380 (68) 443-94-26</a>
+        <ul class="address-list">
+          <li class="address-item">
+            <a class="address-item-link" href="" target="_blank"
               ><img
                 src="./images/messenger/facebook.svg"
                 alt="facebook"
@@ -35,8 +36,9 @@
                 height="28"
             /></a>
           </li>
-          <li>
-            <a href="" target="_blank"
+
+          <li class="address-item">
+            <a class="address-item-link" href="" target="_blank"
               ><img
                 src="./images/messenger/instagram.svg"
                 alt="instagram"
@@ -44,8 +46,9 @@
                 height="28"
             /></a>
           </li>
-          <li>
-            <a href="" target="_blank"
+
+          <li class="address-item">
+            <a class="address-item-link" href="" target="_blank"
               ><img
                 src="./images/messenger/youtube.svg"
                 alt="youtube"
@@ -66,30 +69,37 @@
           width="392"
           height="545"
         />
-        <h1>
+
+        <h1 class="hero__title">
           Reviving the traditional
           <span class="accent">Ukrainian</span> artistry in every stitch.
         </h1>
-        <a href="">ORDER <img src="./images/hero/arrow.svg" alt="arrow" /></a>
+
+        <a class="hero__link" href=""
+          >ORDER <img src="./images/hero/arrow.svg" alt="arrow"
+        /></a>
+
         <img
           src="./images/hero/hero-star.png"
           alt="gold star"
           width="52"
           height="51"
         />
-        <p>all embroidery is made by hand</p>
+
+        <p class="hero__text">all embroidery is made by hand</p>
       </section>
 
       <!-- About -->
       <section class="about">
-        <h2>About Us</h2>
-        <p>
+        <h2 class="about__title">About Us</h2>
+        <p class="about__text">
           The store "Vyshyvanka Vibes" is a place where traditional Ukrainian
           vyshyvanka comes to life with new zest and style. Our store offers a
           wide selection of high-quality and authentic embroidery, which
           combines the elegance of traditional needlework and modern design.
         </p>
-        <p>
+
+        <p class="about__text">
           In "Vyshyvanka Vibes" you will find various models of embroidery, from
           classic to modern, corresponding to the latest fashion trends. Our
           embroidery is made using natural fabrics and is embroidered by highly
@@ -100,12 +110,14 @@
           Vibes" has its own unique history and symbolism, which gives it a
           special meaning.
         </p>
+
         <img
           src="./images/about/about-girl-and-boy.jpg"
           alt="a fragment of a shirt"
           width="594"
           height="545"
         />
+
         <img
           src="./images/about/elements.png"
           alt="elements"
@@ -116,72 +128,80 @@
 
       <!-- Our colliction -->
       <section class="our-collection">
-        <h2>Our collection</h2>
+        <h2 class="our-collection__title">Our collection</h2>
+
         <img
           src="./images/our-collection/traditional-ukrainian-element-gold.png"
           alt="traditional ukrainian element"
         />
 
-        <ul>
-          <li>
+        <ul class="our-collection__list">
+          <li class="our-collection__item">
             <img
               src="./images/our-collection/our-collect-01.jpg"
               alt="AUGUST Poltava women's blouseRING"
               width="380"
               height="430"
             />
-            <h3>AUGUST Poltava women's blouseRING</h3>
-            <p>3300 UAH</p>
+            <h3 class="our-collection__item-title">
+              AUGUST Poltava women's blouseRING
+            </h3>
+            <p class="our-collection__text">3300 UAH</p>
           </li>
-          <li>
+
+          <li class="our-collection__item">
             <img
               src="./images/our-collection/our-collect-02.jpg"
               alt="Women's blouse Gorgany"
               width="380"
               height="430"
             />
-            <h3>Women's blouse Gorgany</h3>
-            <p>3350 UAH</p>
+            <h3 class="our-collection__item-title">Women's blouse Gorgany</h3>
+            <p class="our-collection__text">3350 UAH</p>
           </li>
-          <li>
+
+          <li class="our-collection__item">
             <img
               src="./images/our-collection/our-collect-03.jpg"
               alt="Women's blouse Crimea"
               width="380"
               height="430"
             />
-            <h3>Women's blouse Crimea</h3>
-            <p>4000 UAH</p>
+            <h3 class="our-collection__item-title">Women's blouse Crimea</h3>
+            <p class="our-collection__text">4000 UAH</p>
           </li>
-          <li>
+
+          <li class="our-collection__item">
             <img
               src="./images/our-collection/our-collect-04.jpg"
               alt="Men's shirt Verkhovina"
               width="380"
               height="430"
             />
-            <h3>Men's shirt Verkhovina</h3>
-            <p>3100 UAH</p>
+            <h3 class="our-collection__item-title">Men's shirt Verkhovina</h3>
+            <p class="our-collection__text">3100 UAH</p>
           </li>
-          <li>
+
+          <li class="our-collection__item">
             <img
               src="./images/our-collection/our-collect-05.jpg"
               alt="Mountain men's shirt"
               width="380"
               height="430"
             />
-            <h3>Mountain men's shirt</h3>
-            <p>3300 UAH</p>
+            <h3 class="our-collection__item-title">Mountain men's shirt</h3>
+            <p class="our-collection__text">3300 UAH</p>
           </li>
-          <li>
+
+          <li class="our-collection__item">
             <img
               src="./images/our-collection/our-collect-06.jpg"
               alt="Men's shirt Yasen"
               width="380"
               height="430"
             />
-            <h3>Men's shirt Yasen</h3>
-            <p>1700 UAH</p>
+            <h3 class="our-collection__item-title">Men's shirt Yasen</h3>
+            <p class="our-collection__text">1700 UAH</p>
           </li>
         </ul>
       </section>
@@ -204,6 +224,7 @@
           width="289"
           height="484"
         />
+
         <img
           src="./images/form/element-vyshyvanka.jpg"
           alt="element vyshyvanka"
@@ -211,26 +232,26 @@
           height="521"
         />
 
-        <h2>
+        <h2 class="form__title">
           <span class="accent">Your order</span> is our priority: Personalized
           approach and quality of service
         </h2>
-        <button type="button">Send</button>
+        <button class="form__button" type="button">Send</button>
       </section>
 
       <!-- Testimonials -->
       <section class="testimonials">
-        <h2>Testimonials</h2>
-        <ul>
-          <li>
+        <h2 class="testimonials__title">Testimonials</h2>
+        <ul class="testimonials__list">
+          <li class="testimonials__item">
             <img
               src="./images/testimonials/maria-tkachuk.png"
               alt="Maria Tkachuk"
               width="64"
               height="64"
             />
-            <h3>Maria Tkachuk</h3>
-            <p>
+            <h3 class="testimonials__item-title">Maria Tkachuk</h3>
+            <p class="testimonials__text">
               I was pleasantly surprised by the variety of embroidery offered by
               Vyshyvanka Vibes. They have models for every taste - from classic
               to modern. I bought an embroidered dress to celebrate a special
@@ -238,15 +259,16 @@
               detail.
             </p>
           </li>
-          <li>
+
+          <li class="testimonials__item">
             <img
               src="./images/testimonials/sergey-rybachok.png"
               alt="Sergey Rybachok"
               width="64"
               height="64"
             />
-            <h3>Sergey Rybachok</h3>
-            <p>
+            <h3 class="testimonials__item-title">Sergey Rybachok</h3>
+            <p class="testimonials__text">
               Vyshyvanka Vibes exceeds all my expectations! Their vyshyvanka are
               simply masterpieces! I fell in love with the quality of the
               materials and the skill of the artisans behind each product. This
@@ -254,15 +276,16 @@
               special and unique.
             </p>
           </li>
-          <li>
+
+          <li class="testimonials__item">
             <img
               src="./images/testimonials/natalia-chatuk.png"
               alt="Natalia Chatuk"
               width="64"
               height="64"
             />
-            <h3>Natalia Chatuk</h3>
-            <p>
+            <h3 class="testimonials__item-title">Natalia Chatuk</h3>
+            <p class="testimonials__text">
               Vyshyvanka Vibes is a real find for everyone who appreciates
               Ukrainian culture. Their embroidery reflects the spirit and
               traditions of our people. I not only buy embroidered shirts for
@@ -274,17 +297,30 @@
       </section>
 
       <!-- Footer -->
-      <footer>
-        <ul>
-          <li><a href="">About us</a></li>
-          <li><a href="">Our collection</a></li>
-          <li><a href="">CUSTOMER ORDER</a></li>
-          <li><a href="">TEstimonials</a></li>
+      <footer class="footer">
+        <ul class="footer__list">
+          <li class="footer__item">
+            <a class="footer__item-link" href="">About us</a>
+          </li>
+
+          <li class="footer__item">
+            <a class="footer__item-link" href="">Our collection</a>
+          </li>
+
+          <li class="footer__item">
+            <a class="footer__item-link" href="">CUSTOMER ORDER</a>
+          </li>
+
+          <li class="footer__item">
+            <a class="footer__item-link" href="">TEstimonials</a>
+          </li>
         </ul>
-        <p>
+
+        <p class="footer__text">
           A touch of <span class="accent">Ukrainian</span> culture in every
           embroidery
         </p>
+
         <img
           src="./images/footer/footer-elements.png"
           alt="traditional elements gold"
